...
   - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
<resources>
    <!-- Content description (not visible, for screen readers etc.): Description for the overflow menu button in the browser toolbar. -->
    <string name="mozac_browser_toolbar_menu_button">Menu</string>
    <string name="mozac_clear_button_description">Clear</string>
    <!-- Content description: For the tracking protection toolbar icon, it is set when the site has tracking protection enabled, but none trackers have been blocked or detected. -->
    <string name="mozac_browser_toolbar_content_description_tracking_protection_on_no_trackers_blocked">Tracking Protection is on</string>
    <!-- Content description: For the tracking protection toolbar icon, it is set when the site has tracking protection enabled, and trackers have been blocked or detected.-->
    <string name="mozac_browser_toolbar_content_description_tracking_protection_on_trackers_blocked1">Tracking Protection has blocked trackers</string>
    <!-- Content description: For the tracking protection toolbar icon, it is set when the site has tracking protection disabled.-->
    <string name="mozac_browser_toolbar_content_description_tracking_protection_off_for_a_site1">Tracking Protection is off for this site</string>
    <!-- Content description: For the site security information icon (the site security icon).-->
    <string name="mozac_browser_toolbar_content_description_site_info">Site information</string>
    <!-- Announcement made by the screen reader when the progress bar is shown and a page is loading -->
    <string name="mozac_browser_toolbar_progress_loading">Loading</string>
    <!-- Content description: For the autoplay toolbar icon, it is set when the auto play permission is blocking content playing.-->
    <string name="mozac_browser_toolbar_content_description_autoplay_blocked">Some content has been blocked by the autoplay setting</string>
...
