...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/trackers_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:textSize="24sp"
                tools:text="42" />

...

        </LinearLayout>

    </LinearLayout>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/blocking_switch"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_gravity="center_vertical|end"
        android:background="?android:attr/selectableItemBackground"
        android:checked="true"
        android:clickable="true"
...
