...
        <mozilla.components.ui.widgets.VerticalSwipeRefreshLayout
            android:id="@+id/swipeToRefresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <mozilla.components.concept.engine.EngineView
                tools:ignore="Instantiatable"
                android:id="@+id/engineView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </mozilla.components.ui.widgets.VerticalSwipeRefreshLayout>

        <org.mozilla.samples.browser.awesomebar.AwesomeBarWrapper
            android:id="@+id/awesomeBar"
...
