<?xml version="1.0" encoding="utf-8"?>
<!-- This Source Code Form is subject to the terms of the Mozilla Public
   - License, v. 2.0. If a copy of the MPL was not distributed with this
   - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/suggestion"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:drawablePadding="16dp"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:lines="1"
        android:padding="16dp"
        android:paddingStart="58dp"
        android:text="…"
        android:textColor="@color/searchHintTextColor"
        android:textSize="14sp" />
</FrameLayout>
